syntax = "proto3";

package ark.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fedragon/ark/gen/ark/v1;arkv1";

service ArkApi {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse) {};
}

message Metadata {
  bytes hash = 1;
  string name = 2;
  int64 size = 3;

  google.protobuf.Timestamp created_at = 10;
}

message Chunk {
  bytes data = 1;
}

message UploadFileRequest {
  oneof file {
    Metadata metadata = 1;
    Chunk chunk = 2;
  }
}

message UploadFileResponse {
  string details = 1;
}